# misfans

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE.txt  README.md  README.refactor.md  daemon.rb  misfans.rb  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
installer/: install.sh
misfans/: cli.py  config.py  daemon.py  gpio_driver.py  utils.py
systemd/: misfans.service
tests/: conftest.py  test_config.py  test_hysteresis.py
